--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -14,3 +14,4 @@
     <a href="default.asp"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e9/New_Jersey_IT_seal.svg/530px-New_Jersey_IT_seal.svg.png?20161121225618" width="300" height="300">
   </body>
 </html>
+  @import "{{ site.theme }}";
