--- a/my-first-web-page.html
+++ b/my-first-web-page.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+remote_theme: THEME-NAME
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -14,4 +15,4 @@
     <a href="default.asp"><img src="https://upload.wikimedia.org/wikipedia/en/thumb/e/e9/New_Jersey_IT_seal.svg/530px-New_Jersey_IT_seal.svg.png?20161121225618" width="300" height="300">
   </body>
 </html>
-  @import "{{ site.theme }}";
+
